--- a/index.html
+++ b/index.html
@@ -42,12 +42,8 @@
 <script>
     $(document).ready(function(){
         $('#button').on('click', function(){
-            let d = $('#distanceInput').val();
-            let c = $('#consumptionInput').val();
-            let p = $('#priceInput').val();
-
-            let fuel = d / c;
-            let sum = fuel * p;
+            let fuel = $('#distanceInput').val() / $('#consumptionInput').val();
+            let sum = fuel * $('#priceInput').val();
 
             $('#spentInput').val(fuel.toFixed(1));
             $('#sumInput').val(sum.toFixed(2));
